Added Kellys edits

--- a/summer-announcement.html
+++ b/summer-announcement.html
@@ -21,6 +21,14 @@
 		font-weight:normal;
 		text-decoration:underline;
 	}
+
+	h2 a:link, h2 a:visited, /* Yahoo! Mail Override */  h2 a .yshortcuts /* Yahoo! Mail Override */{
+		text-decoration:none;
+	}
+
+	h2 a:hover {
+		text-decoration:underline;
+	}
 	
 	body, #backgroundTable{
 		background-color:#004834;
@@ -227,7 +235,7 @@
                                     <td valign="middle" class="headerContent">
                                     
                                     	<!-- // Begin Module: Standard Header Image \\ -->
-                                    	<a href="http://www.harker.org/"><img src="http://www.harker.org/uploaded/themes/summer/assets/images/summer-enotify-2012-header-v2.png" alt="The Harker School" style="max-width:560px;" id="headerImage campaign-icon" /></a>
+                                    	<a href="http://summer.harker.org/"><img src="http://www.harker.org/uploaded/themes/summer/assets/images/summer-enotify-2012-header-v2.png" alt="The Harker School" style="max-width:560px;" id="headerImage campaign-icon" /></a>
                                     	<!-- // End Module: Standard Header Image \\ -->
                                     
                                     </td>
@@ -261,7 +269,7 @@
 	                                                                            <tr>
 	                                                                                <td valign="top">
 	 						                                                            <div>
-							                                                                <h2 class="h2">Summer Camp+</h2>
+							                                                                <h2 class="h2"><a href="http://www.harker.org/page.cfm?p=2374">Summer Camp+</a></h2>
 							                                                                <div class="note">Online Registration Opens Jan. 14!</div>
 							                                                                Dear Harker Family,
 																							<br />
@@ -271,9 +279,9 @@
 																							to gather the information you need to join us this
 																							summer.
 																							<div>
-	                                                                                		<a href="http://summer.harker.org"><img src="http://www.harker.org/uploaded/assets/graphics/enotify/summer/summer-enotify-postit-2013.png" style="max-width: 280px;" /></a>
+	                                                                                		<a href="http://www.harker.org/page.cfm?p=2374"><img src="http://www.harker.org/uploaded/assets/graphics/enotify/summer/summer-enotify-postit-2013.png" style="max-width: 280px;" /></a>
 	                                                                                		</div>
-																							Once again we will be providing both challenging
+																							Harker Camp+ provides both challenging
 																							academic curriculum options and fun, interesting
 																							activities. Our professional faculty, enthusiastic
 																							camp staff, great facilities and positive environment
@@ -281,21 +289,11 @@
 																							for your child. Just what you'd expect from Harker!
 																							<br />
 																							<br />
-																							We've included all you need to pick your session,
-																							program and elective classes, so all you have to do
-																							is visit the website and register! Please give us a
+																							We've included a basic intro to the program and 
+																							encourage you to visit the website for more info. 
+																							You can also give us a
 																							call or come by the summer office if you have any
 																							questions; we love to talk about summer! 
-																							<br />
-																							<br />
-																							See you soon,
-																							<br>
-							                                                                <br>
-																							<div>
-																								<div class="signatureName">Kelly Espinosa</div>
-																								<div class="signatureTitle">Director of Summer Programs</div>
-																								<div class="signatureContact">Email: <a href="mailto:campinfo@harker.org">campinfo@harker.org</a></div>
-																							</div>
 							                                                            </div>
 	                                                                                </td>
 	                                                                            </tr>
@@ -323,7 +321,7 @@
 							                                                            	<tr>
 							                                                                	<td valign="middle" class="templateButtonContent">
 							                                                                    	<div>
-							                                                                        	<a href="http://www.harker.org/page.cfm?p=3086" target="_blank">REGISTER NOW!</a>
+							                                                                        	<a href="http://www.harker.org/page.cfm?p=2387" target="_blank">REGISTER NOW!</a>
 							                                                                        </div>
 							                                                                    </td>
 							                                                                </tr>
@@ -351,7 +349,7 @@
 					                                                                        			<h4 class="h4">Grades 1-6 CORE FOCUS</h4>
 																										  Four and three-week camps offer a three-period
 																										  morning including language arts, math and an
-																										  academic elective of your choice.<br>
+																										  academic elective of your choice. <a href="http://www.harker.org/page.cfm?p=2375#core_focus">Learn more &raquo;</a><br>
 																										  <br>
 																										  <strong>Elective Examples</strong><br>
 																										  <br>
@@ -359,7 +357,8 @@
 																											<tr>
 																												<td valign="top">
 																													&bull; Computation Carnival <br>
-																										  			&bull; Monster Math
+																										  			&bull; Monster Math<br>
+																										  			&bull; <a href="http://www.harker.org/page.cfm?p=2377">More courses &raquo;</a>
 																												</td>
 																												<td valign="top">
 																													  &bull; Gravity Rocks! <br>
@@ -376,12 +375,12 @@
 																										  (Learning Opportunities through Literature)</h4>
 																										  Two-week camps offer a single literary theme
 																										  which incorporates language arts, math and the
-																										  arts through multi disciplinary exploration.
+																										  arts through multi disciplinary exploration. <a href="http://www.harker.org/page.cfm?p=2375#lol">Learn more &raquo;</a>
 																										  <br>
 																										  <br>
 																										  <h4 class="h4">KinderCamp</h4>
 																										  Specially designed to prepare campers for
-																										  kindergarten.
+																										  kindergarten. <a href="http://www.harker.org/page.cfm?p=2375#kindercamp">Learn more &raquo;</a>
 										                                                            </div>
 				                                                                                </td>
 				                                                                            </tr>
@@ -405,7 +404,7 @@
 																										<br>
 																										Older campers have more choices and the focus is always
 																										on fun! This year we’ll WOW you with our crazy themes
-																										and special events in all sessions!
+																										and special events in all sessions! <a href="http://www.harker.org/page.cfm?p=2376">Learn more &raquo;</a>
 																										<br>
 																										<br>
 																										<table border="0" cellpadding="0" cellspacing="0" width="100%">
@@ -428,7 +427,12 @@
 																													&bull; Special events!
 																												</td>
 																											</tr>
-																										</table>
+																										</table>										                                                                <br>
+																										<div>
+																											Kelly Espinosa
+																											<div class="signatureTitle">Director of Summer & Preschool Programs</div>
+																											<div class="signatureContact">Email: <a href="mailto:kellye@harker.org">kellye@harker.org</a> | Phone: (408) 553-0526</div>
+																										</div>
 										                                                            </div>
 				                                                                                </td>
 				                                                                            </tr>
