--- a/fs-committee-email.html
+++ b/fs-committee-email.html
@@ -48,7 +48,7 @@
 		color:#202020;
 		display:block;
 		font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-		font-size:24px;
+		font-size:22px;
 		font-weight:bold;
 		line-height:100%;
 		margin-top:0;
@@ -142,7 +142,7 @@
 		border-top:1px dashed #aeaeae;
 	}
 	#templateSidebar div {
-		color: #737373;
+		color: #595959;
 		font-family:Georgia, Times, "Times New Roman", serif;
 		font-size:12px;
 		line-height:125%;
@@ -156,14 +156,9 @@
 		margin: 0;
 	}
 
-	.sidebarText {
-		border-bottom:1px dashed #aeaeae;
-	}
-
 	.sidebarText h3, .sidebarText .h3 {
-		font-size: 14px;
+		font-size: 13px;
 		line-height:150%;
-		margin-bottom: 0;
 	}
 
 	.templateButton, .templateButtonAlt {
@@ -183,11 +178,12 @@
 		background-color:#3eb5c7;
 	}
 
-	.templateButton div {
+	.templateButton div, .templateButtonAlt div {
 		text-align:center;
 	}
 
-	#templateSidebar .templateButton, #templateSidebar .templateButton div, #templateSidebar .templateButton div a:link, #templateSidebar .templateButton div a:visited, /* Yahoo! Mail Override */ .templateButton a .yshortcuts /* Yahoo! Mail Override */{
+	#templateSidebar .templateButton, #templateSidebar .templateButton div, #templateSidebar .templateButton div a:link, #templateSidebar .templateButton div a:visited, /* Yahoo! Mail Override */ .templateButton a .yshortcuts /* Yahoo! Mail Override */
+	#templateSidebar .templateButtonAlt, #templateSidebar .templateButtonAlt div, #templateSidebar .templateButtonAlt div a:link, #templateSidebar .templateButtonAlt div a:visited, /* Yahoo! Mail Override */ .templateButtonAlt a .yshortcuts /* Yahoo! Mail Override */{
 		color:#FFFFFF;
 		font-family:Arial;
 		font-size:15px;
@@ -230,7 +226,7 @@
                                     <td valign="middle" class="headerContent">
                                     
                                     	<!-- // Begin Module: Standard Header Image \\ -->
-                                    	<a href="http://www.harker.org/"><img src="http://www.harker.org/uploaded/themes/enotify-2012/images/header-fs-main-logo.png" alt="The Harker School" style="max-width:560px;" id="headerImage campaign-icon" /></a>
+                                    	<a href="http://www.harker.org/fashionshow"><img src="http://www.harker.org/uploaded/themes/enotify-2012/images/header-fs-main-logo.png" alt="The Harker School" style="max-width:560px;" id="headerImage campaign-icon" /></a>
                                     	<!-- // End Module: Standard Header Image \\ -->
                                     
                                     </td>
@@ -282,22 +278,22 @@
 	                                                                            <tr>
 	                                                                                <td valign="top">
 	 						                                                            <div>
-							                                                                <h2 class="h2">Celebrate With Us!</h2>
+							                                                                <h2 class="h2">Website is Up and Running!</h2>
 							                                                                <div class="note">2013 Harker Fashion Show - Mission: Possible</div>
-							                                                                <h4 class="h4">Sponsorship Opportunites</h4>
-							                                                                This year marks the 10th anniversary of the fashion show. The committee and many members of our community are dedicating a huge amount of effort to deliver a totally unique and spectacular show for our guests to enjoy.
+							                                                                We are pleased to announce that the <a href="http://www.harker.org/fashionshow">Fashion Show website</a> is up and running! Here you can find anything regarding the show. Please feel free to refer anyone who asks you questions to this website.
 																							<br>
 																							<br>
-																							This year’s theme, “Mission: Possible - Dare to Try,“ is inspiring us to dream big and try to achieve things that will take the show and The Harker School to the next level of excellence, as we support our programs, our Mission and our Philosophy.
+																							<h2 class="h2">Reservations are Open</h2>
+																							Thank you to our promotion committee! Please share with your friends that our reservations page is up and running. They do not have to be members of the Harker community … we welcome everyone! For questions regarding reservations please contact <a href="mailto:FSreserve@harker.org">FSreserve@harker</a>.
 																							<br>
 																							<br>
-																							Helping us to achieve these milestones are our many sponsors, to whom we are very grateful. I would like to invite you to consider becoming a sponsor and/or underwriter of this year’s show; join us in the rewarding journey to strive for a higher quality experience for our students.
+																							<h2 class="h2">Calling All Volunteers!</h2>
+																							We are still looking for volunteers in the following areas:
 																							<br>
 																							<br>
-																							If you are interested in being an underwriter for this year’s show, please <a href="http://www.harker.org/fashionshow">visit our website</a>.
-																							<br>
-																							<br>
-																							I wish you a wonderful break and an extraordinary 2013!
+																							<strong>Logistics</strong> - contact <a href="mailto:nn_nayak@pacbell.net">Naren Nayak</a><br>
+																							<strong>Clothing Coordination</strong> - contact <a href="mailto:sartierno@gmail.com">Sara Tierno</a><br>
+																							<strong>Back Stage</strong> - contact <a href="mailto:spachauri@gmail.com">Shalini Pachauri</a>
 																							<br>
 																							<br>
 																							<div>
@@ -305,25 +301,6 @@
 																								<div class="signatureTitle">Director of K-8 Volunteer Programs and Event Fundraising</div>
 																								<div class="signatureContact">Email: <a href="mailto:terea@harker.org">terea@harker.org</a></div>
 																							</div>
-																							<br>
-																							<br>
-																							<!-- // Begin Module: Call-to-action Button \\ -->
-											                                                <table border="0" cellpadding="0" cellspacing="0" width="55%">
-											                                                  	<tr>
-											                                                   		<td valign="top" style="padding-top: 0;">
-											                                                            <table border="0" cellpadding="10" cellspacing="0" width="100%" class="templateButton">
-														                                                    <tr>
-														                                                        <td valign="middle" class="templateButtonContent">
-														                                                            <div>
-														                                                                <a href="http://www.harker.org/fashionshow">Fashion Show Website</a>
-														                                                            </div>
-														                                                        </td>
-														                                                    </tr>
-														                                                </table>
-											                                                        </td>
-											                                                    </tr>
-											                                                </table>
-											                                                <!-- // End Module: Call-to-action Button \\ -->
 							                                                            </div>
 	                                                                                </td>
 	                                                                            </tr>
@@ -339,13 +316,12 @@
 				                                                                    	<table border="0" cellpadding="0" cellspacing="0" width="100%">
 				                                                                    		<tr>
 				                                                                    			<td valign="top" class="sidebarText">
-				                                                                    				<h3 class="h3">A Bit of Content</h3>
+				                                                                    				<h3 class="h3">Next Committee Meeting</h3>
 							                                                                        <div>
-				                                                                                        Crazy as I may make my way through this world. It’s for no one but me to say what direction I shall turn. I am the captain of this ship.
+				                                                                                        Please inform everyone on your committee that our next meeting is <strong>January 17</strong> after drop-off.
 				                                                                                        <br />
 				                                                                                        <br />
-				                                                                                        &raquo; <a href="#">Link to Content</a><br />
-																										&raquo; <a href="#">Link to Content</a>
+				                                                                                        Location: Blackford Multipurpose Room
 				                                                                                    </div>
 				                                                                    			</td>
 				                                                                    		</tr>
@@ -362,7 +338,7 @@
 							                                                            	<tr>
 							                                                                	<td valign="middle" class="templateButtonContent">
 							                                                                    	<div>
-							                                                                        	<a href="#" target="_blank">RSVP TODAY!</a>
+							                                                                        	<a href="http://www.harker.org/page.cfm?p=1756" target="_blank">Fashion Show</a>
 							                                                                        </div>
 							                                                                    </td>
 							                                                                </tr>
@@ -371,7 +347,23 @@
 				                                                            	</tr>
 				                                                            </table>
 				                                                            <!-- // End Module: Call-to-action Button \\ -->
-							                                            </td>
+				                                                            <!-- // Begin Module: Call-to-action Button \\ -->
+				                                                            <table border="0" cellpadding="20" cellspacing="0" width="100%">
+				                                                            	<tr>
+				                                                            		<td valign="top" style="padding-top: 0;">
+							                                                            <table border="0" cellpadding="15" cellspacing="0" width="100%" class="templateButtonAlt">
+							                                                            	<tr>
+							                                                                	<td valign="middle" class="templateButtonContent">
+							                                                                    	<div>
+							                                                                        	<a href="http://www.harker.org/page.cfm?p=1775">Live Auction</a>
+							                                                                        </div>
+							                                                                    </td>
+							                                                                </tr>
+							                                                            </table>
+										                                            </td>
+										                                        </tr>
+										                                    </table>
+										                                    <!-- // End Module: Call-to-action Button \\ -->
 							                                            <!-- // End Sidebar \\ -->
 							                                        </tr>
 							                                    </table>
