Updated sidebar content of fashion show committee message

--- a/fs-committee-email.html
+++ b/fs-committee-email.html
@@ -318,10 +318,12 @@
 				                                                                    			<td valign="top" class="sidebarText">
 				                                                                    				<h3 class="h3">Next Committee Meeting</h3>
 							                                                                        <div>
-				                                                                                        Please inform everyone on your committee that our next meeting is <strong>January 17</strong> after drop-off.
+				                                                                                        Please inform your committee members of our next meeting dates:
 				                                                                                        <br />
 				                                                                                        <br />
-				                                                                                        Location: Blackford Multipurpose Room
+				                                                                                        <b>Dates:</b> Jan. 24 and Feb. 5<br>
+				                                                                                        <b>Time:</b> After Drop-Off
+				                                                                                        <b>Location:</b> Blackford Multipurpose Room<br>
 				                                                                                    </div>
 				                                                                    			</td>
 				                                                                    		</tr>
