Removed top padding image and changed committee header to read Committee Update

--- a/fs-committee-email.html
+++ b/fs-committee-email.html
@@ -239,9 +239,6 @@
                     	<td align="center" valign="top">
                             <!-- // Begin Template Body \\ -->
                         	<table border="0" cellpadding="0" cellspacing="0" width="568" id="templateBody">
-                        		<tr>
-                        			<td valign="top" width="568" colspan="3"><img src="http://www.harker.org/uploaded/themes/enotify-2012/images/dropshadow-top.gif" width="568" height="22" /></td>
-                        		</tr>
                             	<tr>
                             		<td valign="top" width="4"><img src="http://www.harker.org/uploaded/themes/enotify-2012/images/dropshadow-left.gif" width="4" height="100%" /></td>
                                     <td valign="top" class="bodyContent" width="560">
@@ -284,7 +281,7 @@
 																							<br>
 																							<br>
 																							<h2 class="h2">Reservations are Open</h2>
-																							Thank you to our promotion committee! Please share with your friends that our reservations page is up and running. They do not have to be members of the Harker community … we welcome everyone! For questions regarding reservations please contact <a href="mailto:FSreserve@harker.org">FSreserve@harker</a>.
+																							Please share with your friends that our reservations page is up and running. They do not have to be members of the Harker community … we welcome everyone! For questions regarding reservations please contact <a href="mailto:FSreserve@harker.org">FSreserve@harker</a>.
 																							<br>
 																							<br>
 																							<h2 class="h2">Calling All Volunteers!</h2>
@@ -298,7 +295,8 @@
 																							<br>
 																							<div>
 																								<div class="signatureName">Teré Aceves</div>
-																								<div class="signatureTitle">Director of K-8 Volunteer Programs and Event Fundraising</div>
+																								<div class="signatureTitle">Director of K-5 Volunteer Programs,<br>
+																								Event Fundraising & Fashion Show Liaison</div>
 																								<div class="signatureContact">Email: <a href="mailto:terea@harker.org">terea@harker.org</a></div>
 																							</div>
 							                                                            </div>
@@ -318,7 +316,7 @@
 				                                                                    			<td valign="top" class="sidebarText">
 				                                                                    				<h3 class="h3">Next Committee Meeting</h3>
 							                                                                        <div>
-				                                                                                        Please inform your committee members of our next meeting dates:
+				                                                                                        Please inform your committee members of our next meetings:
 				                                                                                        <br />
 				                                                                                        <br />
 				                                                                                        <b>Dates:</b> Jan. 24 and Feb. 5<br>
