--- a/fs-email-tere.html
+++ b/fs-email-tere.html
@@ -291,9 +291,9 @@
 																							<br>
 																							<br>
 																							<strong>RSVP by Fri., Feb. 15, 2013 and let us know:</strong><br>
-																							The name of your host<br>
-																							Your full name<br>
-																							Your meal choice from the following:
+																							&bull; The name of your host<br>
+																							&bull; Your full name<br>
+																							&bull; Your meal choice from the following:
 																							<br>
 																							<br>
 																							<div class="menus">
@@ -425,6 +425,24 @@
 							                                                                	<td valign="middle" class="templateButtonContent">
 							                                                                    	<div>
 							                                                                        	<a href="http://www.harker.org/page.cfm?p=3064">Partners</a>
+							                                                                        </div>
+							                                                                    </td>
+							                                                                </tr>
+							                                                            </table>
+										                                            </td>
+										                                        </tr>
+										                                    </table>
+										                                    <!-- // End Module: Call-to-action Button \\ -->
+
+										                                    <!-- // Begin Module: Call-to-action Button \\ -->
+				                                                            <table border="0" cellpadding="20" cellspacing="0" width="100%">
+				                                                            	<tr>
+				                                                            		<td valign="top" style="padding-top: 0;">
+							                                                            <table border="0" cellpadding="15" cellspacing="0" width="100%" class="templateButtonAlt">
+							                                                            	<tr>
+							                                                                	<td valign="middle" class="templateButtonContent">
+							                                                                    	<div>
+							                                                                        	<a href="http://www.harker.org/page.cfm?p=1775">Live Auction</a>
 							                                                                        </div>
 							                                                                    </td>
 							                                                                </tr>
