--- a/fs-email-tere.html
+++ b/fs-email-tere.html
@@ -177,15 +177,19 @@
 		border-collapse:separate !important;
 		border-radius:3px;
 	}
-	.templateButton a, .templateButtonAlt a {
-		color: #ffffff;
-		text-decoration: none;
-	}
 	.templateButton{
 		background-color:#d51920;
 	}
-	.templateButtonAlt{
-		background-color:#3eb5c7;
+	.templateButton a {
+		color: #ffffff;
+		text-decoration: none;
+	}
+	.templateButtonAlt a {
+		color:#3eb5c7;
+		text-decoration: none;
+	}
+	.templateButtonAlt td{
+		border: 1px dashed #3eb5c7;
 	}
 
 	#templateSidebar .templateButton, #templateSidebar .templateButton div, #templateSidebar .templateButton div a:link, #templateSidebar .templateButton div a:visited, /* Yahoo! Mail Override */ .templateButton a .yshortcuts /* Yahoo! Mail Override */
@@ -198,6 +202,10 @@
 		line-height:100%;
 		text-align:center;
 		text-decoration:none;
+	}
+
+	#templateSidebar .templateButtonAlt, #templateSidebar .templateButtonAlt div, #templateSidebar .templateButtonAlt div a:link, #templateSidebar .templateButtonAlt div a:visited, /* Yahoo! Mail Override */ .templateButtonAlt a .yshortcuts /* Yahoo! Mail Override */ {
+		color: #3194A3;
 	}
 	
 	#templateFooter{
