--- a/simple-letter.html
+++ b/simple-letter.html
@@ -84,6 +84,26 @@
 		background-color:#eaeaea;
 		border-bottom:0;
 	}
+
+	.templateButton{
+		-moz-border-radius:3px;
+		-webkit-border-radius:3px;
+		background-color:#336699;
+		border:0;
+		border-collapse:separate !important;
+		border-radius:3px;
+	}
+
+	.templateButton, .templateButton div, .templateButton div a:link, .templateButton div a:visited, /* Yahoo! Mail Override */ .templateButton a .yshortcuts /* Yahoo! Mail Override */{
+		color:#FFFFFF;
+		font-family:Arial;
+		font-size:15px;
+		font-weight:bold;
+		letter-spacing:-.5px;
+		line-height:100%;
+		text-align:center;
+		text-decoration:none;
+	}
 	
 	.headerContent{
 		color:#202020;
@@ -231,24 +251,49 @@
                                         	<tr>
                                         		<td valign="top">
                                         			<div>
-                                        				<h4>An Exciting & Historic Announcement!</h4>
-                                        				<p>Dear Friends,</p>
-														<p>Thanks for your interest in our proposed preschool project. I am pleased to pass along the most recent information regarding the purchase of our preschool property from Chris Nikoloff, our Head of School.</p>
-                                        				<div class="quote">
-                                        					<p>Dec. 4, 2103</p>
-															<p>Dear Harker Community,</p>
-															<p>I am writing to share some exciting news that marks a historic moment for The Harker School.
-															When The Palo Alto Military Academy and Miss Harker’s School for Girls merged together and moved from Palo Alto to San Jose in 1972, the Nichols family took enormous risks in settling the school’s new home in San Jose. Tonight, more than four decades later, the San Jose City Council unanimously approved The Harker School's use permit of the 4525 Union Avenue property. This historic vote moves Harker one step closer towards owning all three of our campuses, and securing the City of San Jose as the permanent home of our wonderful community.</p>
-															<p>As you are aware, Harker plans to open a preschool in the fall of 2013 on the Union campus and later, as part of a broader strategy of unwinding from our Blackford lease, move our lower school program to Union and our middle school program to Bucknall. At that time the school will own all three of its San Jose sites, each uniquely dedicated to the needs of our students.</p>
-															<p>An effort like the securing of the Union Avenue campus is not possible without the help of a great team and the support of the community. I want to thank everyone in the Harker community who leaned in to make this historic accomplishment a reality.</p>
-															<p>Chris Nikoloff, Head of School</p>
-															<p>The Harker School</p>
-                                        				</div>
-														<p>With that great news we are on our way to building Harker's preschool program on the Union campus! However, there is still much to do and, as promised, we want to keep you informed about our exciting plans as we go along.</p>
-														<p>First, we'll be working with the city and county to bring the property up to code in a number of areas. Then, we'll take the necessary steps to secure our preschool license from the county. All of this takes time (3-4 months) and until the preschool permit is secured we are limited in our ability to advertise the program and register children.</p>
-														<p>As the permitting process is underway we are also working on the many other aspect of the program. We will soon have a more comprehensive schedule of program days and times and a tuition and fee schedule. We're also looking forward to an OPEN HOUSE on the new campus for everyone to come and take a peek before too much construction begins.</p>
-														<p>So, please keep an eye out for our emails and please let me know if you have any other questions. We love to talk about our new project and are happy to answer your questions anytime!</p>
-														<p>Thanks!</p>
+                                        				<h4>Preschool “Sneak Peek” Event, Tuition Set</h4>
+                                        				We’re so excited about getting the keys to our beautiful new campus this week, which will be the home of our new proposed preschool next fall (and our lower school in the future). We’re planning on jumping right in with the early phases of construction!
+														<br>
+														<br>
+														Before we do, we thought it would be fun for families to take a peek at the site, have some coffee and pastries, tour through the buildings, check out our plans for the space, roam the grounds, meet us and ask questions. Due to state regulations our admission process cannot begin until licensing is complete (we anticipate completion in late June), but we know you’re eager to envision where your children may be spending their days in the future.
+														<br>
+														<br>
+														<h4 class="h4">Preschool Site “Sneak Peek” </h4>
+														
+														Sat., March 9, 9 a.m.-12 p.m.
+														<br>
+														4525 Union Ave., San Jose, Calif., 95124
+														<br>
+														<br>
+														<!-- // Begin Module: Call-to-action Button \\ -->
+				                                                            <table border="0" cellpadding="20" cellspacing="0" width="100%">
+				                                                            	<tr>
+				                                                            		<td valign="top" style="padding-top: 0;">
+				                                                            			<table border="0" cellpadding="15" cellspacing="0" width="100%" class="templateButton">
+							                                                            	<tr>
+							                                                                	<td valign="middle" class="templateButtonContent">
+							                                                                    	<div>
+							                                                                        	<a href="https://webapps.pcrsoft.com/EventScheduling/Default.aspx?scn=SGFya2VydjI%3d&appId=1" target="_blank">RSVP Required</a>
+							                                                                        </div>
+							                                                                    </td>
+							                                                                </tr>
+							                                                            </table>
+				                                                            		</td>
+				                                                            	</tr>
+				                                                            </table>
+				                                                            <!-- // End Module: Call-to-action Button \\ -->
+				                                        <br>
+				                                        <br>
+														We’re committed to being good neighbors at all of our campuses, so please park in designated spots on the campus, and avoid unnecessary driving on neighborhood streets.
+
+														<h3 class="h3">Tuition Set</h3>
+														The Harker Board of Trustees recently finalized tuition for Harker’s new preschool at $22,000 for the full-day, five-days-a-week program. Extended care in the morning and afternoon, as well as a lunch program, will be offered at an additional expense, and half-day and partial-week programs will also be available. Please visit our <a href="http://www.harker.org/preschool">preschool page</a> for more information on the choices.
+														<br>
+				                                        <br>
+														Thanks again for your interest in our proposed preschool project. We will continue to send you updates as our plans progress! Please contact us at <a href="mailto:preschool@harker.org">preschool@harker.org</a> with your questions.
+														<br>
+				                                        <br>
+														Thanks!
                                         				<img src="http://www.harker.org/uploaded/themes/enotify-2012/images/signature-kelly-espinosa.jpg" alt="Miss Kelly" />
                                         			</div>
                                         		</td>
