--- a/simple-letter.html
+++ b/simple-letter.html
@@ -251,14 +251,13 @@
                                         	<tr>
                                         		<td valign="top">
                                         			<div>
-                                        				<h4>Preschool “Sneak Peek” Event, Tuition Set</h4>
-                                        				We’re so excited about getting the keys to our beautiful new campus this week, which will be the home of our new proposed preschool next fall (and our lower school in the future). We’re planning on jumping right in with the early phases of construction!
+                                        				We're so excited about getting the keys to our beautiful new campus this week, which will be the home of our new proposed preschool next fall (and our lower school in the future). We're planning on jumping right in with the early phases of construction!
 														<br>
 														<br>
-														Before we do, we thought it would be fun for families to take a peek at the site, have some coffee and pastries, tour through the buildings, check out our plans for the space, roam the grounds, meet us and ask questions. Due to state regulations our admission process cannot begin until licensing is complete (we anticipate completion in late June), but we know you’re eager to envision where your children may be spending their days in the future.
+														Before we do, we thought it would be fun for families to take a peek at the site, have some coffee and pastries, tour through the buildings, check out our plans for the space, roam the grounds, meet us and ask questions. Due to state regulations our admission process cannot begin until licensing is complete (we anticipate completion in late June), but we know you're eager to envision where your children may be spending their days in the future.
 														<br>
 														<br>
-														<h4 class="h4">Preschool Site “Sneak Peek” </h4>
+														<h4 class="h4">Preschool Site "Sneak Peek" </h4>
 														
 														Sat., March 9, 9 a.m.-12 p.m.
 														<br>
@@ -266,7 +265,7 @@
 														<br>
 														<br>
 														<!-- // Begin Module: Call-to-action Button \\ -->
-				                                                            <table border="0" cellpadding="20" cellspacing="0" width="100%">
+				                                                            <table border="0" cellpadding="0" cellspacing="0" width="140">
 				                                                            	<tr>
 				                                                            		<td valign="top" style="padding-top: 0;">
 				                                                            			<table border="0" cellpadding="15" cellspacing="0" width="100%" class="templateButton">
@@ -284,17 +283,18 @@
 				                                                            <!-- // End Module: Call-to-action Button \\ -->
 				                                        <br>
 				                                        <br>
-														We’re committed to being good neighbors at all of our campuses, so please park in designated spots on the campus, and avoid unnecessary driving on neighborhood streets.
-
+														We're committed to being good neighbors at all of our campuses, so please park in designated spots on the campus, and avoid unnecessary driving on neighborhood streets.
+<br>
+<br>
 														<h3 class="h3">Tuition Set</h3>
-														The Harker Board of Trustees recently finalized tuition for Harker’s new preschool at $22,000 for the full-day, five-days-a-week program. Extended care in the morning and afternoon, as well as a lunch program, will be offered at an additional expense, and half-day and partial-week programs will also be available. Please visit our <a href="http://www.harker.org/preschool">preschool page</a> for more information on the choices.
+														The Harker Board of Trustees recently finalized tuition for Harker's new preschool at $22,000 for the full-day, five-days-a-week program. Extended care in the morning and afternoon, as well as a lunch program, will be offered at an additional expense, and half-day and partial-week programs will also be available. Please visit our <a href="http://www.harker.org/preschool">preschool page</a> for more information on the choices.
 														<br>
 				                                        <br>
 														Thanks again for your interest in our proposed preschool project. We will continue to send you updates as our plans progress! Please contact us at <a href="mailto:preschool@harker.org">preschool@harker.org</a> with your questions.
 														<br>
 				                                        <br>
 														Thanks!
-                                        				<img src="http://www.harker.org/uploaded/themes/enotify-2012/images/signature-kelly-espinosa.jpg" alt="Miss Kelly" />
+                                        				<img style="display: block;" src="http://www.harker.org/uploaded/themes/enotify-2012/images/signature-kelly-espinosa.jpg" alt="Miss Kelly" />
                                         			</div>
                                         		</td>
                                         	</tr>
