Changed video in fashion show email to go to home page

--- a/fs-email-tere.html
+++ b/fs-email-tere.html
@@ -291,7 +291,7 @@
 	                                                                        <table border="0" cellpadding="20" cellspacing="0" width="100%" class="feature-article">
 	                                                                            <tr>
 	                                                                                <td valign="top">
-	                                                                                	<a href="http://www.youtube.com/watch?v=tm2Bfoi-kDw"><img src="http://www.harker.org/uploaded/assets/graphics/enotify/fashionshow/invite-video-embed.jpg" style="max-width: 320px; margin-bottom: 20px;" /></a>
+	                                                                                	<a href="http://www.harker.org/fashionshow"><img src="http://www.harker.org/uploaded/assets/graphics/enotify/fashionshow/invite-video-embed.jpg" style="max-width: 320px; margin-bottom: 20px;" /></a>
 	 						                                                            <div class="content">
 							                                                                <h2 class="h2">Celebrate With Us!</h2>
 							                                                                <div class="note">2013 Harker Fashion Show - Mission: Possible</div>
