Linked HCS logo to website

--- a/event.html
+++ b/event.html
@@ -244,7 +244,7 @@
 						                                    <td class="headerContent">
 						                                    
 						                                    	<!-- // Begin Module: Standard Header Image \\ -->
-				                                            	<img src="http://www.harker.org/uploaded/themes/enotify-2012/images/harker-concert-series-header.jpg" style="max-width:560px;" id="headerImage campaign-icon" />
+				                                            	<a href="http://www.harker.org/page.cfm?p=2431"><img src="http://www.harker.org/uploaded/themes/enotify-2012/images/harker-concert-series-header.jpg" style="max-width:560px;" id="headerImage campaign-icon" /></a>
 				                                            	<!-- // End Module: Standard Header Image \\ -->
 						                                    
 						                                    </td>
