Fixed cross client bugs

--- a/event.html
+++ b/event.html
@@ -91,7 +91,7 @@
 		font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 		font-size:12px;
 		font-weight:bold;
-		line-height:200%;
+		line-height:24px;
 	}
 	
 	#templateHeader{
@@ -266,8 +266,8 @@
 	                                                                        <table border="0" cellpadding="20" cellspacing="0" width="100%">
 	                                                                            <tr>
 	                                                                                <td valign="top">
-	                                                                                	<img src="http://www.harker.org/uploaded/assets/images/concert-series/sebastian-baverstam.jpg" style="max-width: 320px; margin-bottom: 20px;" />
-	 						                                                            <div>
+	                                                                                	<img src="http://www.harker.org/uploaded/assets/images/concert-series/sebastian-baverstam.jpg" style="max-width: 320px;" />
+	 						                                                            <div style="padding-top:20px;">
 	 						                                                            	<div class="preheader">The Harker School presents</div>
 							                                                                <h2 class="h2">Sebastian Bäverstam</h2>
 							                                                                <div class="note">A 2009 Concert Artists Guild International Competition cellist performing at The Harker School.</div>
